--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -86,10 +86,10 @@ linter:
     prefer_asserts_in_initializer_lists: true
     prefer_collection_literals: true
     prefer_conditional_assignment: true
-    prefer_const_constructors: true
-    prefer_const_constructors_in_immutables: true
-    prefer_const_declarations: true
-    prefer_const_literals_to_create_immutables: true
+    # prefer_const_constructors: true
+    #prefer_const_constructors_in_immutables: true
+    #prefer_const_declarations: true
+    #prefer_const_literals_to_create_immutables: true
     prefer_contains: true
     prefer_equal_for_default_values: true
     prefer_final_fields: true
