--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.8
-  flutter_svg: ^2.2.1
   flutter_localizations:
     sdk: flutter
   intl: any
+
+  flutter_svg: 2.2.1
+  sliver_tools: 0.2.12
+  provider: 6.1.5+1
 
 dev_dependencies:
   flutter_test:
