--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: 2.2.1
   sliver_tools: 0.2.12
   provider: 6.1.5+1
+  go_router: 16.2.5
 
 dev_dependencies:
   flutter_test:
