--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
   # Génération de code pour les requêtes
+  # Lancer `dart run build_runner watch --delete-conflicting-outputs`
   retrofit_generator: 10.0.6
   json_serializable: any
   build_runner: 2.9.0
+  injectable_generator: 2.9.0
 
 flutter:
 
